# av-stoikov-mm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: fetch_l2.py
src/avsm/: avellaneda_stoikov.py  metrics.py  parameters.py
tests/: test_avellaneda_stoikov.py
